add header; styles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
+  </head>
+  <body>
+    <!-- <header></header> -->
+    <header>
+      <a href="index.html"
+        ><img src="images/logo_header.svg" alt="logo" class="header_logo"
+      /></a>
+      <nav class="header_nav">
+        <ul>
+          <li class="nav_li"><a href="index.html" class="nav_text">Home</a></li>
+          <li class="nav_li_center"><a href="" class="nav_text">Post</a></li>
+          <li class="nav_li"><a href="" class="nav_text">Newsletter</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
