--- a/index.html
+++ b/index.html
@@ -22,5 +22,23 @@
         </ul>
       </nav>
     </header>
+    <!-- <article></article> -->
+    <article>
+      <h2 class="article_header">Tentang Kami</h2>
+      <p class="article_p1">
+        BERTUMBUH adalah organisasi non-profit yang mempunyai tujuan untuk
+        Melindungi, menjaga, merawat, dan melestarikan pohon-pohon yang ada di
+        dunia serta kami akan terus menjaga kestabilan bumi lewat penanaman dan
+        penghijauan.
+      </p>
+      <p class="article_p2">
+        Lewat penanaman dan penghijauan ini juga kita dapat mencegah berbagai
+        masalah seperti pemanasan global, polusi, banjir, tanah longsor serta
+        terjaganya flora dan dan fauna yang ada di dunia dan oleh dasar ini pula
+        organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan
+        cara menjadi relawan, petani serta kamu juga bisa berdonasi untuk
+        mendukung kegiatan oprasional kami.
+      </p>
+    </article>
   </body>
 </html>
