--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
     <!-- <article></article> -->
-    <article>
+    <article class="article1">
       <h2 class="article_header">Tentang Kami</h2>
       <p class="article_p1">
         BERTUMBUH adalah organisasi non-profit yang mempunyai tujuan untuk
@@ -40,5 +40,25 @@
         mendukung kegiatan oprasional kami.
       </p>
     </article>
+    <!-- <section></section> -->
+    <section class="section1">
+      <img src="images/image1.png" alt="tree" class="section1_image" />
+      <article class="article2">
+        <h2 class="section1_header">
+          Bersama Lindungi Bumi Kita Untuk Masa Depan
+        </h2>
+        <p class="section1_p">
+          Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan
+          dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami
+          bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia
+          yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi
+          untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang
+          lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk
+          menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih
+          indah dan asri untuk kita, dia, dan semua.
+        </p>
+        <button>Rear More</button>
+      </article>
+    </section>
   </body>
 </html>
