--- a/index.html
+++ b/index.html
@@ -60,5 +60,17 @@
         <button>Rear More</button>
       </article>
     </section>
+    <!-- <section></section> -->
+    <section class="section2">
+      <h2 class="section2_header">Berita, Artikel & Event</h2>
+      <div class="card1">
+        <img src="images/image2.png" alt="forest" >
+        <p class="card_p">Selamatkan Hutan Untuk Bumi yang Sehat</p>
+      </div>
+    <div class="card2">
+      <img src="images/image3.png" alt="mountain">
+      <p class="card_p">Kegiatan Naik Gunung Ciremai bersama</p>
+    </div>
+    </section>
   </body>
 </html>
