--- a/index.html
+++ b/index.html
@@ -72,5 +72,16 @@
       <p class="card_p">Kegiatan Naik Gunung Ciremai bersama</p>
     </div>
     </section>
+  <!-- <footer></footer> -->
+  <footer>
+    <img src="images/footer_logo.svg" alt="logo" class="footer_logo">
+    <nav class="footer_nav">
+      <h2 class="footer_head">Support</h2>
+      <ul>
+        <li ><a href="" class="footer_text">Contact Us</a></li>
+      <li class=><a href="" class="footer_text_middle">Terms of Service</a></li>
+      <li class=><a href="" class="footer_text">Privacy Policy</a</li></ul>
+    </nav>
+  </footer>
   </body>
 </html>
